theme/src/sass/forms/_forms.scss
//-----------------------------------------------------------------------------
// Forms: All forms.
//-----------------------------------------------------------------------------

form {
  // Standard labels.
  .form-item__standard {
    label {
      color: $color-primary-darker;
      display: block;
      font-family: $font-lato;
      font-size: 1rem;
      padding-bottom: 0.25rem;

      &:after {
        content: ':';
      }
    }
  }

  // Read only fields.
  .form-item__readonly {
    input {
      color: $color-grey !important;
      border-bottom: 1px solid $color-grey-lighter !important;
      font-size: 1.25rem;

      &:focus ~ .focus-border {
        display: none;
      }
    }
  }

  // Select fields.
  select {
    width: 100%;
  }

  // Label animation.
  input[type="text"],
  input[type="password"] {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid $color-grey-lighter;
    color: $color-black;
    font-family: $font-lato;
    font-size: 1.25rem;
    letter-spacing: 1px;
    padding: 0.25rem 0;
    width: 100%;

    &:focus {
      outline: none;
    }

    &:focus ~ .focus-border {
      background-color: $color-primary-darker;
      bottom: 0;
      height: 2px;
      left: 0;
      position: absolute;
      width: 0;
      @include prefix((transition: $transition-linear));
    }

    &:not(:focus).has-content {
      border-bottom: 1px solid $color-black;
    }

    &:focus ~ .focus-border,
    &.has-content ~ .focus-border {
      width: 100%;
    }

    & ~ label {
      color: $color-grey;
      font-family: $font-lato;
      font-size: 1.25rem;
      left: 0;
      letter-spacing: 0.5px;
      position: absolute;
      top: 9px;
      @include prefix((transition: $transition-linear));
      width: 100%;
      z-index: -1;
    }

    &:focus ~ label,
    &.has-content ~ label {
      color: $color-primary-darker;
      font-size: 1rem;
      top: -1rem;
    }
  }

  // First form item spacing.
  .form-item {
    position: relative;
    margin-top: 1.25rem;
    max-width: 32rem;
  }

  // Other form items spacing.
  .form-item + .form-item {
    margin-top: 1.75rem;
  }

  // Form actions spacing.
  .form-actions {
    margin-top: 1.25rem;
  }
}

